fixes gap for modal buynow fields on tablet

--- a/src/sass/layout/_modal-buynow.scss
+++ b/src/sass/layout/_modal-buynow.scss
@@ -40,6 +40,7 @@
 
   @media screen and (min-width: $tablet) {
     margin-bottom: 32px;
+    gap: 16px;
   }
 }
 
